--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>EzRedisLib</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <url>https://jitpack.io/#jitpack/EzRedisLib/1.0</url>
+    <url>https://jitpack.io/#jitpack/EzRedisLib/1.0-SNAPSHOT</url>
 
     <build>
         <plugins>
@@ -17,7 +17,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
-                <configuration> <!-- Compile java 17 compatible bytecode -->
+                <configuration>
                     <source>17</source>
                     <target>17</target>
                 </configuration>
