--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,5 +1,5 @@
 jdk:
-  - corretto17
+  - openjdk17
 before_install:
-  - sdk install java 17-amzn
-  - sdk use java 17-amzn
+  - sdk install java 17.0.1-open
+  - sdk use java 17.0.1-open
